# OOP-Library-Project

./: README.md
Library Project/: CMakeLists.txt
Library Project/include/: Account.h  AccountManager.h  AccountStorage.h  Admin.h  Book.h  BookStorage.h  FileManager.h  Library.h  LoginManager.h  Member.h  Rent.h  RentManager.h  RentStorage.h
Library Project/savedFiles/: myLibrary
Library Project/src/: Account.cpp  AccountManager.cpp  AccountStorage.cpp  Admin.cpp  Book.cpp  BookStorage.cpp  FileManager.cpp  Library.cpp  LoginManager.cpp  Member.cpp  Rent.cpp  RentManager.cpp  RentStorage.cpp  main.cpp
Library Project/test/: AccountManagerTest.cpp  AccountStorageTest.cpp  BookStorageTest.cpp  LoginManagerTest.cpp  RentManagerTest.cpp  RentStorageTest.cpp  master.cpp
